// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Program /> renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "elevation": 3,
      "marginBottom": 10,
      "padding": 10,
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 3,
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-evenly",
        "opacity": 1,
        "paddingLeft": 40,
        "paddingTop": 10,
      }
    }
  >
    <View
      style={
        Object {
          "flexBasis": "80%",
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 20,
          }
        }
      >
        Beginner
      </Text>
      <Text
        style={
          Object {
            "textAlign": "right",
          }
        }
      >
        0
        /
        1
         trainings
      </Text>
      <View
        style={
          Object {
            "backgroundColor": "#f1f1f1",
            "borderRadius": 2,
            "height": 3,
            "marginTop": 5,
            "width": "100%",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "backgroundColor": "#232b2b",
                "borderRadius": 5,
                "width": "50%",
              },
              Object {
                "width": "0%",
              },
            ]
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flexBasis": "10%",
          "paddingLeft": 20,
        }
      }
    >
      <Image
        source={1}
        style={
          Object {
            "aspectRatio": 0.4560669456066946,
            "height": 20,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`<Program /> renders correctly when finished 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "elevation": 3,
      "marginBottom": 10,
      "padding": 10,
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 3,
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-evenly",
        "opacity": 1,
        "paddingLeft": 40,
        "paddingTop": 10,
      }
    }
  >
    <View
      style={
        Object {
          "flexBasis": "80%",
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 20,
          }
        }
      >
        Beginner
      </Text>
      <Text
        style={
          Object {
            "textAlign": "right",
          }
        }
      >
        2
        /
        2
         trainings
         👍🎉
      </Text>
      <View
        style={
          Object {
            "backgroundColor": "#f1f1f1",
            "borderRadius": 2,
            "height": 3,
            "marginTop": 5,
            "width": "100%",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "backgroundColor": "#232b2b",
                "borderRadius": 5,
                "width": "50%",
              },
              Object {
                "width": "100%",
              },
            ]
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flexBasis": "10%",
          "paddingLeft": 20,
        }
      }
    >
      <Image
        source={1}
        style={
          Object {
            "aspectRatio": 0.4560669456066946,
            "height": 20,
          }
        }
      />
    </View>
  </View>
</View>
`;
